@@ -1,3 +1,9 @@
+2001-09-07  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/x86/pentium4/sse2/addmul_1.asm: New file.
+	* mpn/x86/pentium4/sse2/lshift.asm: New file.
+	* mpn/x86/pentium4/sse2/rshift.asm: New file.
+
 2001-09-04  Kevin Ryde  <kevin@swox.se>
 
 	* tune/freq.c: Define a HAVE for each speed_cpu_frequency routine to
